name:                asl-build
version:             0.1.0.0
synopsis:            Orchestration of the AS System
description:         Please see README.md
homepage:            https://github.com/NorfairKing/asl
author:              Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
license:             AllRightsReserved
license-file:        LICENSE
copyright:           Copyright: (c) 2016 Tom Sydney Kerckhove
category:            Build
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      AslBuild
      AslBuild.Build
      AslBuild.Clean
      AslBuild.CommitHash
      AslBuild.Constants
      AslBuild.Jar
      AslBuild.OptParse
      AslBuild.Reports
      AslBuild.Run
      AslBuild.RunBaseLine
      AslBuild.Utils
  build-depends:
      base                          >= 4.7    && < 5
    , shake                         >= 0.15   && < 0.16
    , optparse-applicative          >= 0.13   && < 0.14
    , mtl
    , split
    , configurator                  >= 0.3    && < 0.4
  default-language:    Haskell2010

executable asl
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , asl-build
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/NorfairKing/asl-build
