name:                orchestra
version:             0.1.0.0
synopsis:            Orchestration of the AS System
description:         Please see README.md
homepage:            https://github.com/NorfairKing/asl
author:              Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
license:             AllRightsReserved
license-file:        LICENSE
copyright:           Copyright: (c) 2016 Tom Sydney Kerckhove
category:            Build
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      AslBuild
    , AslBuild.Analysis
    , AslBuild.Analysis.Baseline
    , AslBuild.Analysis.BuildR
    , AslBuild.Analysis.StabilityTrace
    , AslBuild.Baseline
    , AslBuild.Baseline.Types
    , AslBuild.Build
    , AslBuild.BuildMemcached
    , AslBuild.Clean
    , AslBuild.Client
    , AslBuild.Client.Types
    , AslBuild.CommitHash
    , AslBuild.CommonActions
    , AslBuild.Constants
    , AslBuild.Create
    , AslBuild.Experiments
    , AslBuild.Experiment
    , AslBuild.Experiment.Types
    , AslBuild.Jar
    , AslBuild.LocalLogTest
    , AslBuild.LocalMiddlewareMultiClientTest
    , AslBuild.LocalMiddlewareMultipleClientsTest
    , AslBuild.LocalMiddlewareMultipleServersTest
    , AslBuild.LocalMiddlewareParseTest
    , AslBuild.LocalMiddlewareReplicationTest
    , AslBuild.LocalMiddlewareSimpleTest
    , AslBuild.LocalMiddlewareTest
    , AslBuild.LocalMiddlewareTest.Types
    , AslBuild.LocalMiddlewareThoroughTest
    , AslBuild.Memaslap
    , AslBuild.Memaslap.Types
    , AslBuild.Memaslap.LogParser
    , AslBuild.Memcached
    , AslBuild.Memcached.Types
    , AslBuild.Middle
    , AslBuild.Middle.Types
    , AslBuild.Middleware
    , AslBuild.Middleware.Types
    , AslBuild.OptParse
    , AslBuild.Orc
    , AslBuild.PreCommit
    , AslBuild.Provision
    , AslBuild.Reports
    , AslBuild.RunDebug
    , AslBuild.Server
    , AslBuild.Server.Types
    , AslBuild.Ssh
    , AslBuild.StabilityTrace
    , AslBuild.Test
    , AslBuild.Travis
    , AslBuild.Types
    , AslBuild.Utils
    , AslBuild.VisualVm
    , AslBuild.Vm
    , AslBuild.Vm.Types
  build-depends:
      base                          >= 4.7    && < 5
    , shake                         >= 0.15   && < 0.16
    , aeson
    , aeson-pretty
    , parsec                        >= 3.1    && < 3.2
    , bytestring                    >= 0.10   && < 0.11
    , cassava                       >= 0.4    && < 0.5
    , directory                     >= 1.2    && < 1.3
    , filepath                      >= 1.4    && < 1.5
    , hashable                      >= 1.2    && < 1.3
    , mtl
    , network
    , optparse-applicative          >= 0.13   && < 0.14
    , process                       >= 1.4    && < 1.5
    , split
    , text                          >= 1.2    && < 1.3
    , threads                       >= 0.5    && < 0.6
  default-language:    Haskell2010

executable orc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , orchestra
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/NorfairKing/asl
